--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,11 +17,9 @@
 <body>
 <header th:insert="generique.html :: nav"></header>
 
-
 <div class="container">
     <H1 class="monTitre">ce titre qui doit être vert...</H1>
 
-    <br/>
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -31,15 +29,15 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="...">
+                    <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel1.jpg}" class="d-block w-100" alt="...">
                     <!--<img src="http://lorempixel.com/1200/600/abstract/3" class="d-block w-100" alt="photo carrousel 1">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
-                        <P>Les images affichées sont en 1200 x 800.</P>
+                        <P>Les images affichées sont en 1200 x 600.</P>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="photo carrousel 2">
+                    <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel2.jpg}" class="d-block w-100" alt="photo carrousel 2">
                     <!--<img src="http://lorempixel.com/1200/800/abstract/2" class="d-block w-100" alt="photo carrousel 2">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
@@ -47,7 +45,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1200x600" class="d-block w-100" alt="photo carrousel 3">
+                    <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel3.jpg}" class="d-block w-100" alt="photo carrousel 3">
                     <!--<img src="http://lorempixel.com/1200/800/abstract/1" class="d-block w-100" alt="photo carrousel 3">-->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
@@ -69,14 +67,22 @@
     <br/>
 
     <div class="row justify-content-around">
-        <a href="#"><img src="http://placehold.it/200x200" alt="chat1" class="rounded-circle">  </a>  <!-- rounded-circle = image ronde -->
-        <a href="#"><img src="http://placehold.it/200x200" alt="chat2" class="rounded-circle">  </a>
-        <!--<a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="chat3" class="rounded-circle">  </a>-->
-        <a href="#"><img src="http://placehold.it/200x200" alt="chat3" class="rounded-circle">  </a>
-        <!--<img src="http://placehold.it/1200x600" class="d-block w-100" alt="...">-->
+        <div>
+            <a href="#"><img src="http://placehold.it/200x200" alt="site" class="rounded-circle"> </a>
+            <!-- rounded-circle = image ronde -->
+            <P>Decouvrez les plus beaux sites</P>
+        </div>
+        <div>
+            <a href="#"><img src="http://placehold.it/200x200" alt="topo" class="rounded-circle"> </a>
+            <P>Echangez vos topos</P>
+            <!--<a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="chat3" class="rounded-circle">  </a>-->
+        </div>
+        <div>
+            <a href="#"><img src="http://placehold.it/200x200" alt="experience" class="rounded-circle"> </a>
+            <P>Partager votre expérience</P>
+        </div>
     </div>
 
-    <h3>Titre de bas de page avant le footer</h3>
 </div>
 <br/>
 
