--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Escalade</title>
-    <meta name="description" content="Site officiel des Amis de l'Escalade">
-    <meta name="keywords" content="escalade, topo, grimpeur">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
-    <!--<link rel="stylesheet" href="../static/css/main.css">-->
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-</head>
+<head th:replace="generique :: head"></head>
 
 <body>
 <header th:insert="generique.html :: nav"></header>
 
 <div class="container">
-    <H1 class="monTitre">ce titre qui doit être vert...</H1>
+    <H2 class="monTitre">Bienvenue </H2>
 
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -32,24 +20,24 @@
                     <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel1.jpg}" class="d-block w-100" alt="...">
                     <!--<img src="http://lorempixel.com/1200/600/abstract/3" class="d-block w-100" alt="photo carrousel 1">-->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <P>Les images affichées sont en 1200 x 600.</P>
+                        <h5>L'aventure</h5>
+                        <P>Rejoignez une association de passionnés</P>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel2.jpg}" class="d-block w-100" alt="photo carrousel 2">
                     <!--<img src="http://lorempixel.com/1200/800/abstract/2" class="d-block w-100" alt="photo carrousel 2">-->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
+                        <h5>L'entraide</h5>
+                        <P>Partagez vos bons plans, vos topos</P>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="http://placehold.it/1200x600" th:src="@{/img/carrousel3.jpg}" class="d-block w-100" alt="photo carrousel 3">
                     <!--<img src="http://lorempixel.com/1200/800/abstract/1" class="d-block w-100" alt="photo carrousel 3">-->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <P>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</P>
+                        <h5>Les contacts</h5>
+                        <P>Rencontrez des grimpeurs de la France entière</P>
                     </div>
                 </div>
             </div>
@@ -68,36 +56,24 @@
 
     <div class="row justify-content-around">
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" alt="site" class="rounded-circle"> </a>
+            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/montagne.png}" alt="site" class="rounded-circle largeur-tiers"> </a>
             <!-- rounded-circle = image ronde -->
-            <P>Decouvrez les plus beaux sites</P>
+            <P class="text-center largeur-tiers">Decouvrez les plus beaux sites</P>
         </div>
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" alt="topo" class="rounded-circle"> </a>
-            <P>Echangez vos topos</P>
+            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/topo.png}" alt="topo" class="rounded-circle largeur-tiers"> </a>
+            <P class="text-center largeur-tiers">Echangez vos topos</P>
             <!--<a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="chat3" class="rounded-circle">  </a>-->
         </div>
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" alt="experience" class="rounded-circle"> </a>
-            <P>Partager votre expérience</P>
+            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/partage.png}" alt="experience" class="rounded-circle largeur-tiers"> </a>
+            <P class="text-center largeur-tiers">Partager votre expérience</P>
         </div>
     </div>
 
 </div>
-<br/>
-
-<hr>
 
 <footer th:insert="generique.html :: footer"></footer>
-
-<!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<!-- include javascript (tentative de remplacement des références absolues par URL précédentes ci-dessous-->
-<script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
-<script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
-<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
 
 </body>
 </html>
