--- a/src/main/resources/templates/listetopos.html
+++ b/src/main/resources/templates/listetopos.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
-<html lang="fr" xmlns:th="http://thymeleaf.org">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="fr" xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:th="http://thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="generique :: head"></head>
 
 <body>
 <header th:replace="generique :: nav"></header>
 
 <div class="container">
-    <H1 class="monTitre">Liste des TOPOS en vert (ctrl fichier main.CSS)...</H1>
-    <h2>Tableau lignes bicolores</h2>
+    <!--                    TODO faire un test sur l'utilisateur connecté ou non (Liste des topos ou Mes topos) -->
+    <h2 class="my-3 monTitre">Mes Topos</h2>
 
-    <div class="container my-2" th:switch="${topos}">
+    <h2 class="monTitre" th:text="${#lists.size(topos)}"></h2>
+
+    <div class="container my-2">
         <div class="row">
-            <div >
-                <h2 th:case="null">Aucun topo !</h2>
+            <div th:switch="${#lists.size(topos)}">
+                <h4 th:case=0>Aucun topo !</h4>
                 <div th:case="*">
-<!--                    TODO faire un test sur l'utilisateur connecté ou non (Liste des topos ou Mes topos) -->
-                    <h2 class="my-3">Mes Topos</h2>
                     <div class="table-responsive-md">
                         <table class="table table-striped ">
                             <thead>
@@ -28,8 +30,6 @@
                                 <th scope="col">disponible</th>
                                 <th scope="col"> </th>
                                 <th scope="col"> </th>
-<!--                                <th scope="col">Modifier</th>-->
-<!--                                <th scope="col">Supprimer</th>-->
                             </tr>
                             </thead>
                             <tbody>
@@ -49,6 +49,11 @@
                 </div>
                 <a class="btn btn-primary" href="/login" role="button">s'identifier <i class="fas fas fa-user-check ml-2"></i></a>
                 <a class="mx-3 btn btn-primary" href="/formulairetopo" role="button">Ajouter Topo <i class="far fa-plus-square ml-2"></i></a>
+                <BR>
+                <p sec:authorize="isAnonymous()">Utilisateur anonyme</p>
+                <p sec:authorize="isAuthenticated()" >Utilisateur autorisé</p>
+                <p sec:authorize="hasAuthority('user')" >profil user</p>
+                <p sec:authorize="hasAuthority('admin')" >profil admin</p>
             </div>
         </div>
     </div>
@@ -58,9 +63,5 @@
 
 <footer th:replace="generique :: footer"></footer>
 
-<!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<script src="webjars/jquery/3.3.1/jquery.min.js/" type="text/javascript"></script>
-<script src="webjars/popper.js/1.14.3/popper.min.js" type="text/javascript"></script>
-<script src="webjars/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
