--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,8 +4,12 @@
     color: green;
 }
 
+p{
+    margin-bottom: 0;
+}
+
 .largeur-tiers {
-    width: 200px;
+    width: 150px;
     /*height: 200px;*/
 }
 
