--- a/src/main/resources/templates/ajoutertopo.html
+++ b/src/main/resources/templates/ajoutertopo.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://thymeleaf.org">
+<html lang="fr" xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="generique :: head"></head>
 
 <body>
 <header th:replace="generique :: nav"></header>
 
 <div class="container">
-    <H1 class="monTitre">Ajouter un topo</H1>
+    <H3 class="monTitre">Ajouter un topo</H3>
         <form action="#" th:action="@{/ajoutertopo}" th:object="${topo}" method="post">
             <form:errors path = "*" cssClass = "errorblock" element = "div" />
             <div  class="form-group row">
@@ -44,7 +45,7 @@
                 <label for="dateParution" class="col-sm-2 col-form-label">Date parution</label>
                 <div class="col-sm-10">
                     <input type="date" class="form-control" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
-                    <span th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
+                    <span class="text-danger" th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -59,8 +60,9 @@
                 <!--</div>-->
             </div>
 
+            <!--        todo supprimer la ligne suivante et tester MAJTopo-->
             <input type="hidden" th:field="*{utilisateur.utilisateurId}" th:value="2" name="idUtilisateur"/>
-            <div th:if="${#fields.hasErrors('*')}">errors</div>
+            <div class="text-danger" th:if="${#fields.hasErrors('*')}">errors</div>
 
             <input type="submit" value="Valider">
         </form>
