--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://www.thymeleaf.org">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="generique :: head"></head>
 
 <body>
 <header th:insert="generique.html :: nav"></header>
 
 <div class="container">
+
+    <P sec:authorize="isAnonymous()">Utilisateur anonyme</P>
+    <P sec:authorize="isAuthenticated()" >Utilisateur authentifié</P>
+    <P sec:authorize="hasAuthority('user')" >profil user</P>
+    <P sec:authorize="hasAuthority('admin')" >profil admin</P>
+    <P sec:authorize="hasRole('user')" >Role user</P>
+    <P sec:authorize="hasRole('admin')" >Role admin</P>
+
     <H2 class="monTitre">Bienvenue </H2>
 
     <div class="bd-example">
@@ -56,17 +65,17 @@
 
     <div class="row justify-content-around">
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/montagne.png}" alt="site" class="rounded-circle largeur-tiers"> </a>
+            <a href="/listesites"><img src="http://placehold.it/200x200" th:src="@{/img/montagne.png}" alt="site" class="rounded-circle largeur-tiers"> </a>
             <!-- rounded-circle = image ronde -->
             <P class="text-center largeur-tiers">Decouvrez les plus beaux sites</P>
         </div>
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/topo.png}" alt="topo" class="rounded-circle largeur-tiers"> </a>
+            <a href="/listetopos"><img src="http://placehold.it/200x200" th:src="@{/img/topo.png}" alt="topo" class="rounded-circle largeur-tiers"> </a>
             <P class="text-center largeur-tiers">Echangez vos topos</P>
             <!--<a href="#"><img src="http://lorempixel.com/200/200/cats/3" alt="chat3" class="rounded-circle">  </a>-->
         </div>
         <div>
-            <a href="#"><img src="http://placehold.it/200x200" th:src="@{/img/partage.png}" alt="experience" class="rounded-circle largeur-tiers"> </a>
+            <a href="/listesites"><img src="http://placehold.it/200x200" th:src="@{/img/partage.png}" alt="experience" class="rounded-circle largeur-tiers"> </a>
             <P class="text-center largeur-tiers">Partager votre expérience</P>
         </div>
     </div>
