--- a/src/main/resources/templates/listetopos.html
+++ b/src/main/resources/templates/listetopos.html
@@ -8,10 +8,12 @@
 <header th:replace="generique :: nav"></header>
 
 <div class="container">
-    <!--                    TODO faire un test sur l'utilisateur connecté ou non (Liste des topos ou Mes topos) -->
-    <h2 class="my-3 monTitre">Mes Topos</h2>
+    <!--   TODO faire un test sur l'utilisateur connecté ou non (Liste des topos ou Mes topos) -->
 
-    <h2 class="monTitre" th:text="${#lists.size(topos)}"></h2>
+    <h3 sec:authorize="isAuthenticated()" class="my-3 monTitre">Mes Topos (user authentifié)</h3>
+    <h3 sec:authorize="isAuthenticated()" class="my-3 monTitre">Mes Topos (user authentifié)</h3>
+
+
 
     <div class="container my-2">
         <div class="row">
@@ -22,7 +24,7 @@
                         <table class="table table-striped ">
                             <thead>
                             <tr>
-                                <th scope="col">Topo</th>
+                                <th scope="col">Topo (<span th:text="${#lists.size(topos)}"></span>)</th>
                                 <th scope="col">Description</th>
                                 <th scope="col">Parution</th>
                                 <th scope="col">Région</th>
@@ -40,20 +42,17 @@
                                 <td th:text="${topo.region.nomRegion}"></td>
                                 <td th:text="${topo.utilisateur.pseudo}"></td>
                                 <td th:class="${topo.disponible}? 'text-success' : 'text-danger'" th:utext="${topo.disponible}? 'Oui' : 'Non'"></td>
-                                <td><a class="btn btn-primary" th:href="@{/majtopo/{id}(utilisateurId=${topo.topoId})}"><i class="fas fa-pencil-alt "></i></a></td>
+                                <td><a class="btn btn-primary" th:href="@{/majtopo/{id}(id=${topo.topoId})}"><i class="fas fa-pencil-alt "></i></a></td>
                                 <td><a class="btn btn-primary" th:href="@{/supprimertopo/{id}(id=${topo.topoId})}"><i class="far fa-trash-alt"></i></a></td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <a class="btn btn-primary" href="/login" role="button">s'identifier <i class="fas fas fa-user-check ml-2"></i></a>
+                <a class="btn btn-primary" href="/login" role="button" sec:authorize="isAnonymous()">s'identifier <i class="fas fas fa-user-check ml-2"></i></a>
                 <a class="mx-3 btn btn-primary" href="/formulairetopo" role="button">Ajouter Topo <i class="far fa-plus-square ml-2"></i></a>
                 <BR>
-                <p sec:authorize="isAnonymous()">Utilisateur anonyme</p>
-                <p sec:authorize="isAuthenticated()" >Utilisateur autorisé</p>
-                <p sec:authorize="hasAuthority('user')" >profil user</p>
-                <p sec:authorize="hasAuthority('admin')" >profil admin</p>
+
             </div>
         </div>
     </div>
