--- a/src/main/resources/templates/site.html
+++ b/src/main/resources/templates/site.html
@@ -6,104 +6,137 @@
 <body>
 <header th:insert="generique.html :: nav"></header>
 <div class="container">
-    <H1 class="monTitre" th:text="${site.nomSite}">Nom du SITE</H1>
+    <H3 class="monTitre" th:text="${site.nomSite}">Nom du SITE</H3>
     <div class="row align-items-center">
         <img class="rounded col-md-3" th:src="@{'/img/' + ${site.photo}}" th:title="${site.nomSite}" alt="..."/>
         <div class="col-sm-12 col-md-6">
-            <div class="row justify-content-center">
-                <img class="col-sm-6 col-md-3 " th:src="@{/img/officiel.png}" alt="site officiel"/>
-            </div>
             <br>
             <P class="font-weight-bold" th:text="${site.descriptionSite}"></P>
             <P>Cotations : de <span class="badge badge-pill badge-primary" th:text="${site.cotationMin}">2a</span> à <span class="badge badge-pill badge-primary" th:text="${site.cotationMax}">2c</span></P>
             <P><em class="text-muted" th:text="${site.region.nomRegion}"></em></P>
+            <div class="row justify-content-center">
+                <img class="col-sm-6 col-md-3 " th:if="${site.tagOfficiel}" th:src="@{/img/officiel.png}" alt="site officiel"/>
+            </div>
         </div>
     </div>
     <br>
 
     <h4>Secteurs</h4>
-    <div class="accordion" id="accordionSecteur">
-        <div class="card" th:each="secteur : ${site.secteurs}">
-            <div class="card-header" th:attr="id='secteur' + ${secteur.secteurid}">
-                <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" th:attr="data-target='#collapseSecteur' + ${secteur.secteurid}, aria-controls='collapseSecteur' + ${secteur.secteurid}" aria-expanded="true">
-                        <span th:utext="${secteur.nomSecteur}"></span>
-                    </button>
-                </h2>
-            </div>
-            <div th:attr="id='collapseSecteur' + ${secteur.secteurid}, aria-labelledby='secteur' + ${secteur.secteurid}" class="collapse" data-parent="#accordionSecteur">
-                <div class="card-body">
-                    <th:block th:switch="${#lists.size(secteur.voies)}">
-                        <P th:case=0>Aucun secteur répertorié sur ce site !</P>
-                        <table th:case="*" class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Voie</th>
-                                    <th scope="col">Cotation</th>
-                                    <th scope="col">Points</th>
-                                    <th scope="col">Longeurs</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr scope="row" th:each="voie : ${secteur.voies}">
-                                    <td th:text="${voie.nomVoie}">Nom de voie</td>
-                                    <td th:text="${voie.cotationVoie}">2b</td>
-                                    <td th:text="${voie.nbPointsVoie}">5</td>
-                                    <td><a href="#" th:text="${#lists.size(voie.longueurs)}"  th:if="${not #lists.isEmpty(voie.longueurs)}" data-toggle="modal" th:attr="data-target='#listelongueurs' + ${voie.voieid}">2</a>
-                                        <div class="modal fade" th:attr="id='listelongueurs' + ${voie.voieid}" tabindex="-1" role="dialog" aria-labelledby="TitreModaleLongueurs" aria-hidden="true">
-                                            <div class="modal-dialog" role="document">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h5 class="modal-title" id="titreModaleLongueurs">Longueurs</h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        <table class="table  table-sm table-dark">
-                                                            <thead>
-                                                            <tr>
-                                                                <th scope="col">Longueur</th>
-                                                                <th scope="col">Cotation</th>
-                                                                <th scope="col">Points</th>
-                                                                <th scope="col"></th>
-                                                            </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                            <tr scope="row" th:each="longueur : ${voie.longueurs}">
-                                                                <td th:text="${longueur.nomLongueur}">Nom de voie</td>
-                                                                <td th:text="${longueur.cotationLongueur}">2b</td>
-                                                                <td th:text="${longueur.nbPointsLongueur}">5</td>
-                                                            </tr>
-                                                            </tbody>
-                                                        </table>
-                                                    </div> <!--modal_body-->
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-primary">Ajouter</button>
-                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+    <th:block th:switch="${#lists.size(site.secteurs)}">
+        <P th:case=0>Aucun secteur répertorié sur ce site !</P>
+
+        <div th:case="*" class="accordion" id="accordionSecteur">
+            <div class="card" th:each="secteur : ${site.secteurs}">
+                <div class="card-header" th:attr="id='secteur' + ${secteur.secteurid}">
+                    <span>
+                        <button class="btn btn-link" type="button" data-toggle="collapse" th:attr="data-target='#collapseSecteur' + ${secteur.secteurid}, aria-controls='collapseSecteur' + ${secteur.secteurid}" aria-expanded="true">
+                            <span th:utext="${secteur.nomSecteur}"></span>
+                        </button>
+                    </span>
+                    <span class="float-right">
+                        <a th:href="@{/modifiersecteur/{secteurid}(secteurid=${secteur.secteurid})}" class="far fa-edit" title="Modifier"></a> |
+                        <a th:href="@{/supprimersecteur/{secteurid}(secteurid=${secteur.secteurid})}" class="far fa-trash-alt" title="Supprimer"></a>
+                    </span>
+                </div>
+                <div th:attr="id='collapseSecteur' + ${secteur.secteurid}, aria-labelledby='secteur' + ${secteur.secteurid}" class="collapse" data-parent="#accordionSecteur">
+                    <div class="card-body">
+                        <th:block th:switch="${#lists.size(secteur.voies)}">
+                            <P th:case=0>Aucune voie répertoriée sur ce secteur !</P>
+
+                            <div class="table-responsive">
+                            <table th:case="*" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Voie</th>
+                                        <th scope="col">Cotation</th>
+                                        <th scope="col">Points</th>
+                                        <th scope="col">Longeurs</th>
+                                        <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="voie : ${secteur.voies}">
+                                        <td th:text="${voie.nomVoie}">Nom de voie</td>
+                                        <td th:text="${voie.cotationVoie}">2b</td>
+                                        <td th:text="${voie.nbPointsVoie}">5</td>
+
+
+                                        <th:block th:switch="${#lists.size(voie.longueurs)}">
+                                            <td th:case=0>
+                                                <a th:href="@{/ajouterlongueur/{voieid}(voieid=${voie.voieid})}" class="far fa-plus-square" title="Ajouter une longueur"></a>
+                                            </td>
+                                            <td th:case="*"     ><a href="#" th:text="${#lists.size(voie.longueurs)}" data-toggle="modal" th:attr="data-target='#listelongueurs' + ${voie.voieid}">2</a>
+                                            <div class="modal fade" th:attr="id='listelongueurs' + ${voie.voieid}" tabindex="-1" role="dialog" aria-labelledby="TitreModaleLongueurs" aria-hidden="true">
+                                                <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="titreModaleLongueurs">Longueurs</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <table class="table  table-sm table-dark">
+                                                                <thead>
+                                                                <tr>
+                                                                    <th scope="col">Longueur</th>
+                                                                    <th scope="col">Cotation</th>
+                                                                    <th scope="col">Points</th>
+                                                                    <th scope="col"></th>
+                                                                </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                <tr th:each="longueur : ${voie.longueurs}">
+                                                                    <td th:text="${longueur.nomLongueur}">Nom de voie</td>
+                                                                    <td th:text="${longueur.cotationLongueur}">2b</td>
+                                                                    <td th:text="${longueur.nbPointsLongueur}">5</td>
+                                                                    <td>
+                                                                        <a th:href="@{/modifierlongueur/{longueurid}(longueurid=${longueur.longueurid})}" class="far fa-edit" title="Modifier"></a> |
+                                                                        <a th:href="@{/supprimerlongueur/{longueurid}(longueurid=${longueur.longueurid})}" class="far fa-trash-alt" title="Supprimer"></a>
+                                                                    </td>
+                                                                </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div> <!--modal-body-->
+                                                        <div class="modal-footer">
+                                                            <a type="button" th:href="@{/ajouterlongueur/{voieid}(voieid=${voie.voieid})}" class="btn btn-primary">Ajouter</a>
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </th:block>
+                                        </td>
+                                        </th:block>
+
+
+                                        <td>
+                                            <a th:href="@{/modifiervoie/{voieid}(voieid=${voie.voieid})}" class="far fa-edit" title="Modifier la voie"></a> |
+                                            <a th:href="@{/supprimervoie/{voieid}(voieid=${voie.voieid})}" class="far fa-trash-alt" title="Supprimer la voie"></a>
+                                        </td>
+
+                                    </tr>
+                                </tbody>
+                            </table> <!-- table voies -->
+                            </div>
+
+                            <a th:href="@{/ajoutervoie/{secteurid}(secteurid=${secteur.secteurid})}" class="btn btn-primary btn-sm float-right mb-3" role="button">Ajouter voie</a>
+                        </th:block>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>  <!-- AccordionSecteur-->
+    </th:block>
+    <br>
+    <a th:href="@{/ajoutersecteur/{siteid}(siteid=${site.siteid})}" class="btn btn-primary btn-sm float-right" role="button">Ajouter secteur</a>
 
     <br>
     <br>
 
 <!--todo trier par date et supprimer Manu en dur-->
-    <h4>Commentaires sur ce site</h4>
+    <h3>Commentaires sur ce site</h3>
     <div>
         <form action="#" th:action="@{/ajoutercommentaire}" method="post" sec:authorize="hasAuthority('user')">
             <hr>
-            <H3>Laissez un commentaires</H3>
+            <H4>Laissez un commentaires</H4>
             <div class="input-group mb-3">
                 <input id="siteid" name="siteid" type="hidden" th:value="${site.siteid}">
                 <input type="text" name="texteCommentaire" class="form-control" placeholder="Votre commentaire..." aria-label="" aria-describedby="bouton-ajouter">
